# tron-tracker

./: .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  Dockerfile  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  TRX_TRACKER_FIX_SUMMARY.md  docker-compose.yml  index.html  package.json  test-deployment.sh
.claude/: settings.local.json
admin-ui/: .env  index.html
admin-ui/src/: App.jsx
admin-ui/src/components/: ErrorBoundary.jsx  Header.jsx  LoadingSpinner.jsx  LoginForm.jsx  NotificationSystem.jsx  ProtectedRoute.jsx  Sidebar.jsx  WebSocketStatus.jsx
admin-ui/src/contexts/: AppContext.jsx  AuthContext.jsx  WebSocketContext.jsx
admin-ui/src/hooks/: useAsync.js  useAsyncError.js  useWebSocket.js
admin-ui/src/pages/: Addresses.jsx  ApiKeys.jsx  Dashboard.jsx  Logs.jsx  Settings.jsx  Transactions.jsx  WebSockets.jsx  Webhooks.jsx
admin-ui/src/services/: api.js  apiKeyService.js  index.js  logService.js  systemService.js  transactionService.js  webhookService.js  websocketService.js
config/: default.toml  local.toml
docs/: API_REFERENCE.md  UNIFIED_ARCHITECTURE.md
migrations/: 001_initial.sql  002_add_start_block_config.sql
src/: App.jsx  main.py  main.rs
src/api/: mod.rs
src/api/handlers/: admin.rs  api_key.rs  dashboard.rs  health.rs  mod.rs  transaction.rs  webhook.rs
src/core/: config.rs  database.rs  database_backup.rs  mod.rs  models.rs  tron_client.rs
src/routes/: admin.py
src/services/: auth.rs  cache.rs  local_cache.rs  mod.rs  scanner.rs  webhook.rs  websocket.rs
src/static/assets/: index-DNnT9IvF.js
