[package]
name = "tron-tracker"
version = "3.0.0"
edition = "2021"
description = "Unified TRX/USDT transaction tracking system with real-time notifications"
authors = ["Manus AI <ai@manus.space>"]
license = "MIT"
repository = "https://github.com/liuxing12315/tron-tracker"

[dependencies]
# Core framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket
axum-tungstenite = "0.20"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Crypto
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "tron-tracker"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

