[package]
name = "tron-tracker"
version = "3.0.0"
edition = "2021"
description = "Unified TRX/USDT transaction tracking system with real-time notifications"
authors = ["Manus AI <ai@manus.space>"]
license = "MIT"
repository = "https://github.com/liuxing12315/tron-tracker"

[dependencies]
# Core framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Local cache
moka = { version = "0.12", features = ["future"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket
axum-tungstenite = "0.3"
tungstenite = "0.21"
futures-util = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Crypto
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "tron-tracker"
path = "src/main.rs"

[profile.dev]
debug = true
opt-level = 0
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
